@@ -10,6 +10,7 @@ python:
 - '3.5'
 - '3.3'
 - '3.6'
+- 'pypy3'
 
 install:
 - pip install -e .
