@@ -4,8 +4,8 @@ import os.path as osp
 
 pygments_version = '>= 2.0.2'
 SYS_VERSION = sys.version_info[0:2]
-if not ((3, 2) <= SYS_VERSION  < (3, 7)):
-    mess = "Python Versions 3.2 to 3.6 are supported only in this package."
+if not ((3, 2) <= SYS_VERSION  <= (3, 7)):
+    mess = "Python Versions 3.2 to 3.7 are supported only in this package."
     if ((2, 4) <= SYS_VERSION <= (2, 7)):
         mess += ("\nFor your Python, version %s, See trepan2" % sys.version[0:3])
     elif SYS_VERSION < (2, 4):
