@@ -1,0 +1,12 @@
+(gcd.py:2): <module>
+-> 2 """Greatest Common Divisor
+Set basename is on.
+Set event is on.
+Set stopping is off.
+output set to not use terminal escape sequences
+output set to not use terminal escape sequences
+output set to not use terminal escape sequences
+output set to not use terminal escape sequences
+output set for terminal with escape sequences for a dark background
+output set for terminal with escape sequences for a light background
+trepan3k: That's all, folks...
