@@ -3,6 +3,7 @@
 
 import unittest
 import inspect
+from xdis import IS_PYPY
 
 from trepan import debugger as Mdebugger
 
@@ -44,67 +45,68 @@ class TestCompletion(unittest.TestCase):
                          ['mBaseCmd', 'mComplete'])
         return
 
-    def test_completion(self):
+    if not IS_PYPY:
+        def test_completion(self):
 
-        self.dbgr = Mdebugger.Trepan()
+            self.dbgr = Mdebugger.Trepan()
 
-        for line, expect_completion in [
-                ['set basename ', ['off', 'on']],
-                ['where', ['where ']],  # Single alias completion
-                ['sho', ['show']],  # Simple single completion
-                ['un', ['unalias', 'undisplay']],  # Simple multiple completion
-                ['python ', []],        # Don't add anything - no more
-                ['set basename o', ['off', 'on']],
-                ['set basename of', ['off']],
+            for line, expect_completion in [
+                    ['set basename ', ['off', 'on']],
+                    ['where', ['where ']],  # Single alias completion
+                    ['sho', ['show']],  # Simple single completion
+                    ['un', ['unalias', 'undisplay']],  # Simple multiple completion
+                    ['python ', []],        # Don't add anything - no more
+                    ['set basename o', ['off', 'on']],
+                    ['set basename of', ['off']],
 
-                # Multiple completion on two words
-                ['set auto', ['autoeval', 'autolist', 'autopython']],
+                    # Multiple completion on two words
+                    ['set auto', ['autoeval', 'autolist', 'autopython']],
 
-                # Completion when word is complete, without space.
-                ['show', ['show ']],
+                    # Completion when word is complete, without space.
+                    ['show', ['show ']],
 
-                # Completion when word is complete with space.
-                ['info ',
-                 ['args', 'break', 'builtins', 'code',
-                  'display', 'files', 'frame', 'globals', 'line',
-                  'locals', 'macro', 'pc', 'program', 'return', 'signals', 'source',
-                  'threads']],
+                    # Completion when word is complete with space.
+                    ['info ',
+                     ['args', 'break', 'builtins', 'code',
+                      'display', 'files', 'frame', 'globals', 'line',
+                      'locals', 'macro', 'pc', 'program', 'return', 'signals', 'source',
+                      'threads']],
 
-                ['help sta', ['stack', 'status']],
-                [' unalias c',  ['c', 'chdir', 'cond']],
+                    ['help sta', ['stack', 'status']],
+                    [' unalias c',  ['c', 'chdir', 'cond']],
 
 
-                # Any set style completion
-                ['set style def', ['default']],
+                    # Any set style completion
+                    ['set style def', ['default']],
 
-                # ['set auto eval ', '', ['off', 'on']],
-                                          # Many 3-word completions
-                # ['set auto ', ['eval', 'irb', 'list']],
-                                          # Many two-word completions
-                # ['set auto e', ['eval']],
-                # ['disas', ['disassemble']], # Another single completion
-                # ['help syn', ['syntax']],
-                # ## FIXME:
-                # ## ['help syntax co', ['command']],
-                # ['help br', ['break', 'breakpoints']],
-            ]:
-            got = self.run_complete(line)
-            self.assertEqual(expect_completion, got,
-                             "Completion of '%s', expecting %s, got %s" %
-                             (line, expect_completion, got))
-            pass
+                    # ['set auto eval ', '', ['off', 'on']],
+                                              # Many 3-word completions
+                    # ['set auto ', ['eval', 'irb', 'list']],
+                                              # Many two-word completions
+                    # ['set auto e', ['eval']],
+                    # ['disas', ['disassemble']], # Another single completion
+                    # ['help syn', ['syntax']],
+                    # ## FIXME:
+                    # ## ['help syntax co', ['command']],
+                    # ['help br', ['break', 'breakpoints']],
+                ]:
+                got = self.run_complete(line)
+                self.assertEqual(expect_completion, got,
+                                 "Completion of '%s', expecting %s, got %s" %
+                                 (line, expect_completion, got))
+                pass
 
-        got = self.run_complete('')
-        self.assertTrue(len(got) > 30,
-                        'Initial completion should return more '
-                        'than 30 commands')
-        got = self.run_complete('info files ')
-        self.assertTrue(len(got) > 0,
-                        'info files completion should return a file')
-        got = self.run_complete('unalias ')
-        self.assertTrue(len(got) > 0,
-                        'unalias should return lots of aliases')
-        return
+            got = self.run_complete('')
+            self.assertTrue(len(got) > 30,
+                            'Initial completion should return more '
+                            'than 30 commands')
+            got = self.run_complete('info files ')
+            self.assertTrue(len(got) > 0,
+                            'info files completion should return a file')
+            got = self.run_complete('unalias ')
+            self.assertTrue(len(got) > 0,
+                            'unalias should return lots of aliases')
+            return
     pass
 
 if __name__ == '__main__':
